fixed details spacing

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -169,9 +169,9 @@ select, option{
 .details-pokemon {
   display: grid;
   grid-template-columns: repeat(2, auto);
+  padding: 1rem 2rem;
   gap: 2rem;
   background-color: #fff;
-  padding: 2rem;
   border-radius: 15px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
   animation: fadeInMoveIn .8s ease-out forwards;
@@ -187,7 +187,7 @@ select, option{
 .details-text {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  width: 100%;
 }
 
 .details-text h1 {
